# railway-example-blog

./: .gitignore  README.md  manage.py  pyproject.toml  railway.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
templates/blog/: base.html  category_post_list.html  post_detail.html  post_list.html
